# YAREN2

./: README-en-md  README-en.md  README-es.md  README.md  requirements.txt  system_dependencies.txt  venv_requirements.txt
CSI-Camera/: simple_camera.py
ia_face_software/: README.md  basics_responses.json  requirements.txt
ia_face_software/faces/separate_parts_without_background/mouths_points/: 14_points.txt  9_points.txt
ia_face_software/games/Laberinto_Tom_y_Jerry/: juego.py  mapa.py  mapa.txt
ia_face_software/ia_face_software/audio_processing/: test.py
ia_face_software/ia_face_software/video_audio_response/: video_generation.py
src/YAREN2/ia_face_software/: CMakeLists.txt  config.yaml  package.xml  setup.cfg  setup.py
src/YAREN2/ia_face_software/ia_face_software/: final_face.py
src/YAREN2/ia_face_software/ia_face_software/audio_processing/: assistant.py
src/YAREN2/ia_face_software/ia_face_software/video_audio_response/: point_tracks.py  united_morph_transition.py  video_wfinals.py
src/YAREN2/ia_face_software/launch/: multiplatform.launch.py
src/YAREN2/yaren_description/: package.xml
src/YAREN2/yaren_description/urdf/: yaren_description.urdf  yaren_description_sim.xacro.urdf
src/YAREN2/yaren_face_display/: CMakeLists.txt
src/YAREN2/yaren_face_display/faces/separate_parts_without_background/mouths_points/: 15_points.txt  3_points.txt  8_points.txt
src/YAREN2/yaren_face_display/src/: face_screen.cpp
src/YAREN2/yaren_moveit2_config/config/: yaren_description_moveit.ros2_control.xacro
src/YAREN2/yaren_moveit2_config/launch/: moveit_rviz.launch.py  rsp.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/YAREN2/yaren_movements/: yaren_fullmovement.py  yaren_rutina1.py
src/YAREN2/yaren_u2d2/scripts/: w_datos_ros2.py
src/YAREN2/yaren_u2d2/src/: dynamixel_hardware.cpp
usb_cam/: CMakeLists.txt
yaren_arm_mimic/: CMakeLists.txt  package.xml
yaren_arm_mimic/include/: body_tracker_node.hpp  yaren_controller.hpp
yaren_arm_mimic/launch/: yaren_mimic.launch.py
yaren_arm_mimic/scripts/: body_points_detector.py  csi_cam_pub.py
yaren_arm_mimic/src/: body_tracker_node.cpp  yaren_controller.cpp
yaren_chat/: CMakeLists.txt  README.md  package.xml
yaren_chat/include/: control_manager_node.hpp  llm_lifecycle_node.hpp
yaren_chat/launch/: yaren_chat.launch.py  yaren_chat_sin_agentes.launch.py
yaren_chat/scripts/: llm_lifecycle_node.py  llm_lifecycle_node_sin_agentes.py  stt_lifecycle_node.py  tts_lifecycle_node.py
yaren_chat/scripts/utils/: config.py  movement_agent.py  react_state.py  state_graph.py
yaren_chat/src/: control_manager_node.cpp  llm_lifecycle_node.cpp
yaren_description/: CMakeLists.txt
yaren_description/launch/: yaren_rviz.py
yaren_description/urdf/: yaren_description.urdf  yaren_description_moveit.urdf  yaren_description_sim.xacro.urdf
yaren_dice/: CMakeLists.txt  README.md  package.xml
yaren_dice/config/: advanced_challenges.yaml  challenges.yaml  intermediate_challenges.yaml
yaren_dice/include/: face_screen.hpp  game_manager.hpp  pose_detector.hpp
yaren_dice/launch/: yaren_dice.launch.py
yaren_dice/scripts/: body_landmarks.py  csi_cam_pub.py  speaker_node.py
yaren_dice/src/: face_screen.cpp  game_manager.cpp  pose_detector.cpp
yaren_emotions/: .gitignore  CMakeLists.txt  README.md  package.xml
yaren_emotions/launch/: yaren_emotions.launch.py
yaren_emotions/models/: model_mbn_1.yaml
yaren_emotions/scripts/: csi_cam_pub.py  detect_emotion.py  detect_emotion_tflite.py
yaren_emotions/utils/: analyzer.py  config.py  csi_cam_pub.py  data_processor.py  emotion_model.py  main.py  visualization.py
yaren_face_display/: CMakeLists.txt  README.md  package.xml
yaren_face_display/faces/separate_parts_without_background/mouths_points/: 0_points.txt  10_points.txt  11_points.txt  12_points.txt  13_points.txt  16_points.txt  1_points.txt  2_points.txt  4_points.txt  5_points.txt  7_points.txt
yaren_face_display/include/: face_screen.hpp
yaren_face_display/src/: face_aramsamsam.cpp  face_bailedegorila.cpp  face_barney.cpp  face_cambiar.cpp  face_chipichapa.cpp  face_hablar.cpp  face_hablar_cambiar.cpp  face_libresoy.cpp  face_sasa.cpp  face_screen.cpp  face_sitienesganas.cpp
yaren_filters/: CMakeLists.txt  README.md  package.xml
yaren_filters/include/: AnimalFaceNode.hpp
yaren_filters/include/mask/: AnimalFilter.hpp
yaren_filters/launch/: yaren_accesorios.launch.py  yaren_animales.launch.py
yaren_filters/scripts/: csi_cam_pub.py  face_landmark_detector.py
yaren_filters/src/: AnimalFaceNode.cpp  FaceFilterNode.cpp
yaren_filters/src/filters/: FaceFilterBase.cpp
yaren_filters/src/mask/: AnimalFilter.cpp
yaren_gazebo_sim/: CMakeLists.txt  package.xml
yaren_gazebo_sim/config/: yaren.rviz  yaren_controllers.yaml
yaren_gazebo_sim/launch/: yaren_gazebo.launch.py
yaren_interfaces/: CMakeLists.txt  package.xml
yaren_interfaces/action/: ProcessResponse.action
yaren_interfaces/msg/: BodyPoints.msg  BodyPosition.msg
yaren_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
yaren_moveit2_config/config/: initial_positions.yaml  yaren_description.urdf.xacro  yaren_description_moveit.srdf
yaren_moveit2_config/launch/: demo.launch.py  move_group.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
yaren_movements/: package.xml  setup.cfg  setup.py  yaren_fullmovement.py  yaren_rutina1.py
yaren_movements/yaren_movements/: yaren_fullmovement.py  yaren_movement.py  yaren_rutina1.py  yaren_rutinanueva.py
yaren_radio/: package.xml  setup.cfg  setup.py
yaren_radio/yaren_radio/: gallinaturuleca.py  pollitopio.py  susanita.py  vacalola.py
yaren_u2d2/: CMakeLists.txt  package.xml  yaren_hardware_plugin.xml
yaren_u2d2/config/: yaren_controllers.yaml
yaren_u2d2/launch/: yaren_communication.launch.py  yaren_gui.launch.py  yaren_robot.launch.py
yaren_u2d2/scripts/: go_base.py  motor_classes.py  u2d2_communication.py  w_datos_ros2.py
yaren_u2d2/src/: dynamixel_hardware.cpp
