<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yaren_radio</name>
  <version>0.0.0</version>
  <description>Scripts de movimiento para el robot Yaren</description>
  <maintainer email="ramel@todo.com">ramel</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>