<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ia_face_software</name>
  <version>1.0.0</version>
  <description>Multi-Platform AI Software for Managing Children Stress - ROS2 Jazzy</description>
  <maintainer email="author@espol.edu.ec">RAMEL-ESPOL</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>